# ansible-collection-cloud

./: .ansible-lint  .gitignore  .travis.yml  .zuul.yaml  README.md  galaxy.yml  galaxy.yml.in  setup.cfg  setup.py  test-requirements-2.9.txt  test-requirements.txt  test.yml  tox.ini  zuul.yaml
changelogs/: config.yaml
core/: README.md
doc/: requirements.txt
docs/: as_config_info_module.rst  as_group_info_module.rst  cce_cluster_cert_info_module.rst  cce_cluster_info_module.rst  cce_cluster_module.rst  deh_host_info_module.rst  deh_host_module.rst  deh_host_type_info_module.rst  deh_server_info_module.rst  floating_ip_module.rst  html.tar.bz2  index.rst  lb_healthmonitor_info_module.rst  lb_healthmonitor_module.rst  lb_listener_info_module.rst  lb_listener_module.rst  lb_member_info_module.rst  lb_member_module.rst  lb_pool_info_module.rst  lb_pool_module.rst  loadbalancer_info_module.rst  loadbalancer_module.rst  nat_dnat_rule_info_module.rst  nat_dnat_rule_module.rst  nat_gateway_info_module.rst  nat_gateway_module.rst  nat_snat_rule_info_module.rst  nat_snat_rule_module.rst  opentelekomcloud.cloud.as_config_info_module.rst  opentelekomcloud.cloud.as_group_info_module.rst  opentelekomcloud.cloud.cce_cluster_cert_info_module.rst  opentelekomcloud.cloud.cce_cluster_info_module.rst  opentelekomcloud.cloud.cce_cluster_module.rst  opentelekomcloud.cloud.floating_ip_module.rst  opentelekomcloud.cloud.lb_healthmonitor_info_module.rst  opentelekomcloud.cloud.lb_healthmonitor_module.rst  opentelekomcloud.cloud.lb_listener_info_module.rst  (+42 more)
examples/: 12_dedicated_host.yaml  (+8 more)
(+465 files in other folders)
