[metadata]
name = ansible-collections-opentelekomcloud
summary = Ansible collections for Opentelekomcloud
description-file =
    README.md

author = opentelekomcloud
home-page = https://open.telekom.cloud
classifier =
    License :: OSI Approved :: Apache License
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Intended Audience :: Information Technology
    Topic :: System :: Systems Administration
    Topic :: Utilities

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
data_files =
    share/ansible/collections/ansible_collections/opentelekomcloud/cloud/ = README.md
    share/ansible/collections/ansible_collections/opentelekomcloud/cloud/roles/ = roles/*
    share/ansible/collections/ansible_collections/opentelekomcloud/cloud/plugins/ = plugins/*
    share/ansible/collections/ansible_collections/opentelekomcloud/cloud/playbooks/ = playbooks/*
    share/ansible/collections/ansible_collections/opentelekomcloud/cloud/scripts/ = scripts/*
    share/ansible/collections/ansible_collections/opentelekomcloud/cloud/docs/ = docs/*
    share/ansible/collections/ansible_collections/opentelekomcloud/cloud/meta/ = meta/*

[wheel]
universal = 1

[pbr]
skip_authors = True
skip_changelog = True
